--- a/style.css
+++ b/style.css
@@ -3,3 +3,38 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+    text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+nav {
+    text-align: center;
+}
+
+figcaption {
+  font-size:small;
+  text-align: center;
+}
+
+#featured-property p {
+   width: 800px;
+   margin-left: auto;
+   margin-right: auto;
+   text-align: center;
+}
+
+#details div{
+  float: left;
+  display: inline-block;
+  text-align: center;
+  width: 25%;
+  background-color: red;
+  
+}
+
