Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -16,7 +16,9 @@ img {
 nav {
     text-align: center;
 }
-a:background-color
+a:background-color {
+  color: red
+}
 
 figcaption {
   font-size:small;
