--- a/style.css
+++ b/style.css
@@ -17,7 +17,9 @@ nav {
     text-align: center;
 }
 a {
-  background-color: gray
+  background-color: gray;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 figcaption {
